[package]
name = "checkupdate-joinset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
serde_json = "*"

tokio = { version = "1", features = ["full"] }

enable-ansi-support = "0"
mincolor = "2"

anyhow = "1"

rule = { path = "../rule" }
models = { path = "../models" }
